# etl-aeropuertos

./: .gitignore  README.md  definitions.py  main.py  pyproject.toml  requirements.txt
assets/: extract.py  load.py  transform.py
data/: flight.csv  frequentflyer.csv
resources/: extract_path.py  hive_resource.py
